Write about page and fix page spacing

--- a/css/index.css
+++ b/css/index.css
@@ -281,7 +281,7 @@ article p {
   right: 20vw;
   padding-left: 20vw;
   min-height: 100vh;
-  padding-top: 20vh;
+  padding-top: 18vh;
 }
 #about h1{
   font-size: 52px;
